Page cheval (Pension + Horaire  + Information)

--- a/tfe2023/src/CSS/ContenuCheval.css
+++ b/tfe2023/src/CSS/ContenuCheval.css
@@ -35,3 +35,14 @@
     color:black;
 }
 /* {{ paddingTop: '2rem', textAlign: 'center', display: 'flex', flexDirection: 'column', marginLeft: 'auto', marginRight: 'auto' }} */
+
+.menuIconeCheval{
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+}
+
+.boutonM:hover{
+    background-color: #deddd7;
+
+}
