--- a/tfe2023/Frontend/src/NavbarSidebar/NavbarSidebar.module.css
+++ b/tfe2023/Frontend/src/NavbarSidebar/NavbarSidebar.module.css
@@ -7,7 +7,7 @@
 .sidebarStyle{
     background-color: #B0C0D5 !important;
     height: 100%;
-    position: fixed;
+    /* position: fixed; */
     left: 0;
     height: auto;
     min-height: 100%;
